# DonutCode

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml
examples/: decoder_test.py  makesample.py  sample.py  sample_decoder.py  動作未検証_scanner.py
sample-result/: bit_map_debug.txt
src/donutcode/: __init__.py  config.py  decoder-bg.py  decoder.py  encoder.py  reedsolomon.py  vision-BG.py  vision.py
src/donutcode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
