[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "donutcode"
version = "1.1.1"
description = "A custom 2D code library with a hole in the center."
authors = [{ name = "Hiroaki Kaji" }]
dependencies = [
    "opencv-python>=4.0.0",
    "numpy>=1.20.0",
    "Pillow>=9.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]